# src/swagger.yaml
@@ -40,7 +40,7 @@ paths:
                 properties:
                   message:
                     type: string
-                  detial: 
+                  detail: 
                     type: string
         401:
           content:
@@ -280,4 +280,28 @@ paths:
         200:
           application/json:
             type: object
+  /moviments:
+    get:
+      tags:
+        - Product Moviments
+      responses:
+        200:
+          content:
+            application/json:
+              type: object
+  /moviments/{productStockId}:
+    get:
+      tags:
+        - Product Moviments
+      parameters:
+        - name: productStockId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          content:
+            application/json:
+              type: object
 
